# national-exams

./: .gitignore  Cargo.toml  README.md
data/ind/: 2023.csv
src/: gatanabrebuli-preprocessor.rs  independent-descaler.rs  lib.rs  parsing.rs  processing.rs  read.rs  skalirebuli-matcher.rs  the-book.rs
src/data/: schools.csv
src/python/: parse_publication_pdf.py
