[package]
name = "national-exams"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "descale-and-sort"
path = "src/the-book.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.21.2"
clap = { version = "4.4.2", features = ["derive"] }
cpython = "0.7.1"
csv = "1.2.2"
dialoguer = "0.10.4"
gnuplot = "0.0.39"
itertools = "0.11.0"
rayon = "1.7.0"
